# youtube-api-project

./: .env.example  .gitignore  LICENSE  MIGRATION_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  server.py
examples/: api_setup_guide.py  basic_usage.py  comparison_demo.py
src/youtube_api_server/: __init__.py  server.py
src/youtube_api_server/config/: settings.py
src/youtube_api_server/extractors/: transcript_extractor.py  youtube_api_extractor.py
src/youtube_api_server/models/: base.py  channel.py  comment.py  search.py  transcript.py  video.py
src/youtube_api_server/utils/: api_client.py  cache.py  rate_limiter.py  url_utils.py
tests/: __init__.py  conftest.py  test_api_client.py  test_models.py  test_url_utils.py
